fixing horizontal scroll

--- a/src/App/style.css
+++ b/src/App/style.css
@@ -1,5 +1,5 @@
 #main-container {
-width: 500px;
+max-width: 500px;
 margin: auto;
   }
 
